--- a/first-steps/03-backgrounds/styles.css
+++ b/first-steps/03-backgrounds/styles.css
@@ -1,11 +1,16 @@
 body{
     background-color:#ccc;
-    background-image:url("img/pattern4.png")
+    /*background-image:url("img/pattern4.png")
     /*background-repeat: no-repeat;
     background-repeat: no-repeat-y;
     background-size: 100% 100%;
     background-attachment: fixed;
     background-position: left bottom;*/
+    color: black;
+    text-align:justify;
+    text-indent: 15px;
+    /*word-spacing: 10px;
+    letter-spacing:5px;*/
 }
 
 #box{
@@ -13,6 +18,12 @@ body{
     padding: 10px;
     background-color:rgb(61, 126, 187);
     color:white;
+    font-family:"Open Sans";
+    text-align: center;
+    line-height: 50px;
+    text-transform:uppercase;
+    text-decoration:underline;
+
 }
 
 h2{
