--- a/first-steps/04-boxes/styles.css
+++ b/first-steps/04-boxes/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+/*
 #box1,
 #box2{
     width: 250px;
@@ -10,6 +11,63 @@
     /*
     min-width:;
     max-width:;
+    *//*
+    background-color:lightblue;
+    border: 10px solid red;
+    margin: 15px;
+    margin-top: 15px;
+    margin-bottom: 40px;
+    margin-left: 24px;
+    margin-right: 10px;
+    padding: 20px;
+    padding-bottom:34px;
+}
+*/
+
+body{
+    padding:40px;
+}
+
+#boxes{
+    max-width:1032px;
+    border: 1px solid black;
+
+}
+
+.box{
+    /* display:none;
+    display:inline; */
+    /* display:block; */
+    display: block;
+    width: 250px;
+    height: 250px;
+    /*
+    min-width:;
+    max-width:;
     */
     background-color:lightblue;
+    border: 10px solid red;
+    margin: 15px;
+    margin-top: 15px;
+    margin-bottom: 40px;
+    margin-left: 24px;
+    margin-right: 10px;
+    padding: 20px;
+    padding-bottom:34px;
+    float:left;
+    /* float:right;
+    float:none; */
+}
+
+.box p{
+    font-weight:bold;
+    text-align:center;
+    font-size:20px;
+    font-family:Arial;
+    line-height:235px;
+}
+
+.clearfix{
+    float:none;
+    clear:both;
 }
