--- a/first-steps/05-exercises/style.css
+++ b/first-steps/05-exercises/style.css
@@ -70,7 +70,12 @@ nav ul li a{
     width:30%;
     border: 1px solid red;
     min-height: 500px;
+    max-height: 650px;
     text-align: center;
+    overflow-y: scroll;
+    /* overflow: scroll;
+    overflow: visible; */
+    /* overflow: hidden; */
 
 }
 
@@ -79,24 +84,36 @@ nav ul li a{
     border-bottom: 1px solid #ccc;
     padding: 15 px;
     color: #444;
+    text-shadow: 1px 1px 2px gray;
 }
 
 
 
 #content .box{
+    /* position: relative; */
+    /* position: absolute;  */
     width: 40%;
     height: 250px;
-    background-color: red;
-    border: 5px solid blue;
-    color: white;
+    background-color: #ccc;
+    border: 1px solid gray;
+    color: #444;
     float: left;
     margin: 20px;
     margin-left: 43px;
+    box-shadow: 5px 5px 10px gray;
+    border-radius: 15px;
+    /* border-radius: 999px;
+    border-radius: 50px 10px 4px 61px; */
 }
 
 #content .box h2{
     text-align:center;
     line-height:235px;
+    text-transform: uppercase;
+}
+
+.inner-shadow{
+    box-shadow: 0px 0px 20px grey inset !important;
 }
 
 #footer{
@@ -107,4 +124,38 @@ nav ul li a{
     text-align: center;
     color: #444;
     border-top: 1px solid #ccc;
+}
+
+.free{
+    position:absolute;
+    top: 300px;
+    left: 50%;
+    border:1px solid black;
+    background-color: red;
+    color: white;
+    height: 50px;
+    width: 50px;
+    font-size: 13px;
+}
+
+.free1{
+    z-index:2;
+}
+
+.free2{
+    background-color: green;
+    top: 280px;
+    left: 53%;
+    z-index:1;
+}
+.fixed{
+    position:fixed;
+    top: 50%;
+    left: 0px;
+    border:1px solid black;
+    background-color: blue;
+    color: white;
+    height: 50px;
+    width: 50px;
+    font-size: 13px;
 }
