--- a/layout-1/css/style.css
+++ b/layout-1/css/style.css
@@ -9,6 +9,22 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face{
+    font-family: "fajala";
+    src: url("fonts/FjallaOne-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face{
+    font-family: "icons";
+    src: url("fonts/websymbols-regular-webfont.svg#WebSymbolsRegular") format("svg"),
+         url("fonts/websymbols-regular-webfont.eot");
+    src: url("fonts/websymbols-regular-webfont.eot?#iefix") format("embedded-opentype"),
+    url("fonts/websymbols-regular-webfont.woff") format("woff"),
+    url("fonts/websymbols-regular-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
 /* GENERAL STYLES */
 
 *{
@@ -39,6 +55,22 @@ a:hover{
 
 .blue{
     color: #0c73f2 !important;
+}
+
+.orange{
+    color: #d69d2a !important;
+}
+
+.icon{
+    font-family:"icons";
+    float: left;
+    margin-right: 5px;
+    margin-top: -2px;
+}
+
+.clearfix{
+    float: none;
+    clear: both;
 }
 
 /* FORMS */
@@ -215,6 +247,7 @@ button:active{
 
 /* CONTENT */
 #content{
+    font-family: sans-serif, Arial, Helvetica;
     width: 1250px;
     min-height:1100px;
     margin: 0px auto;
@@ -223,7 +256,7 @@ button:active{
 /* ASIDE */
 
 #aside, #phrase{
-    clear: both;
+    /* clear: both;  */
     width: 200px;
     float: left;
     margin: 30px;
@@ -234,6 +267,7 @@ button:active{
 }
 
 #phrase{
+    /* clear: both; */
     width: 180px;
     padding: 10px;
     font-size: 14px;
@@ -299,4 +333,77 @@ button:active{
 #aside label{
     margin: 0px auto;
     text-align: center;
+}
+
+/* Sections */
+#sections{
+    float:right;
+    width: 75%;
+    font-family: sans-serif, Arial, Helvetica;
+    margin-right: 20px;
+} 
+
+#sections .title{
+    font-family: "fajala";
+    font-size: 24px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-top: -20px;
+    padding-top: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+#sections section{
+    margin-top: 40px;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 4px #C9C9C9;
+    color: #333333;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+#sections .article{
+    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#sections .date{
+    color: gray;
+    font-size: 14px;
+}
+
+#sections .stickerOne,
+#sections .stickerTwo{
+    position:absolute;
+    margin-top: -38px;
+    z-index: 0;
+}
+
+#sections .stickerTwo{
+    margin-left: 860px;
+}
+
+#history{
+    float: right;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+/* Footer  */
+#footer{
+    width: 100%;
+    margin: 0px auto;
+    text-align: center;
+    margin-top: 40px;
+    background-color: #333333;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    font-family: sans-serif;
+    font-size: 14px;
+    box-shadow: 0px 0px 2px gray;
 }
