animation and responsive

--- a/layout-2/css/styles.css
+++ b/layout-2/css/styles.css
@@ -235,6 +235,11 @@ body{
     margin: 22px;
     margin-top: 40px;
     cursor: pointer;
+    transition: all 300ms;
+}
+
+.card:hover{
+    background: black;
 }
 
 .card:last-child{
@@ -249,6 +254,22 @@ body{
     line-height: 110px;
     text-align: center;
     margin: 0px auto;
+    transition: all 300ms;
+}
+
+.card:hover .icon{
+    font-size: 70px;
+    color: #37bcf9;
+    animation: showIcon 300ms linear;
+}
+
+@keyframes showIcon{
+    from{
+        transform: translateY(-200%);
+    }
+    to{
+        transform: translateY(0%);
+    }
 }
 
 .card .category{
@@ -259,13 +280,49 @@ body{
     font-weight: bold;
     text-align: center;
     color: #00538c;
+    transition: all 300ms;
 }
+
+.card:hover .category{
+    color: white;
+    animation: showCategory 400ms linear;
+}
+
+@keyframes showCategory{
+    from{
+        transform: translateY(-300%);
+        color: black;
+    }
+    to{
+        transform: translateY(0%);
+        color: white;
+    }
+}
+
+
 
 .card .description{
     font-family: "TrebuchetMS";
     text-align: center;
     color: #0370b9;
     font-size: 15px;
+    transition: all 300ms;
+}
+
+.card:hover .description{
+    color: white;
+    animation: showDescription 400ms linear;
+}
+
+@keyframes showDescription{
+    from{
+        transform: translateX(-300%);
+        color: black;
+    }
+    to{
+        tranform: translateX(0%);
+        color: white;
+    }
 }
 /* ASIDE */
 
@@ -439,6 +496,31 @@ aside h3{
     margin-bottom: 20px;
 }
 
+#social .overlay{
+    display: block;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 1px #ccc;
+    border: 3px solid white;
+    box-shadow: 0px 0px 4px #ccc;
+    background: #f4f7fe;
+    position: absolute;
+    padding: 5px;
+    margin-left: 70px;
+    margin-top: -52px;
+    transform: translateX(-80%);
+    opacity: 0;
+    transition: all 400ms;
+}
+
+#social div:hover .overlay{
+    opacity: 1;
+    transform: translateX(0%);
+
+}
+
 /* Articles */
 #articles{
     width: 860px;
@@ -463,7 +545,7 @@ aside h3{
 }
 
 #articles article{
-    width: 100%; 
+    width: 97%; 
     height: auto;
     border: 1px solid #ccc;
     margin: 40px auto;
@@ -516,6 +598,7 @@ aside h3{
     margin-top: 60px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
 }
 
 #blog a{
@@ -524,6 +607,40 @@ aside h3{
     font-size: 40px;
     letter-spacing: 3px;
     color: #00538c;
+    transition: all 1s;
+}
+
+
+#blog:hover{
+    background-color: #333;
+    border: 10px solid #37bcf9;
+    /* border: 10px solid #37bc37; */
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 10s infinite linear;
+}
+
+#blog:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black, 1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
+}
+
+@keyframes blink{
+    0%{
+        border: 10px solid #37bcf9;
+    }
+    25%{
+        border: 10px solid green;
+    }
+    50%{
+        border: 10px solid yellow;
+    }
+    75%{
+        border: 10px solid white;
+    }
+    100%{
+        border: 10px solid #37bcf9;
+    }
 }
 
 /* Footer */
@@ -581,6 +698,13 @@ aside h3{
 #footer ul li a{
     display: block;
     height: 40px;
+    transition: all 300ms;
+}
+
+#footer ul li:hover a{
+    padding-left: 40px;
+    color: white;
+    width: 100%;
 }
 
 #footer iframe{
