--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,5 +1,5 @@
-body {
-  background-color: #ccc;
+h1 {
+  text-decoration: underline;
 }
 
 h1 {
@@ -9,6 +9,122 @@ h1 {
 
 p {
   color: rgb(115, 22, 22);
+}
+
+.box {
+  border: 1px solid black;
+  width: 500px;
+  margin: 0px auto;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+}
+.box h1 {
+  color: blue;
+}
+.box p {
+  color: green;
+}
+.box .info {
+  font-size: 10px;
+}
+.box .info .author {
+  font-size: 15px;
+  color: orange;
+}
+
+.box {
+  border: 10px solid red;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px black;
+}
+
+.list {
+  border: 5px solid green;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px yellow;
+}
+
+.alert-success, .alert-danger, .alert {
+  border: 1px solid gray;
+  background: #eee;
+  color: gray;
+  padding: 10px;
+  width: 80%;
+  margin: 20px auto;
+}
+
+.alert-danger {
+  color: red;
+  border-color: red;
+}
+
+.alert-success {
+  color: green;
+  border-color: green;
+}
+
+.clearfix {
+  clear: both;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+.boxes {
+  width: 900px;
+  margin: 0px auto;
+}
+
+.box {
+  float: left;
+  width: 22.2222222222%;
+  margin: 10px;
+}
+
+h1 {
+  color: pink;
+}
+
+.list ul li:nth-child(1) {
+  font-size: 6px;
+}
+
+.list ul li:nth-child(2) {
+  font-size: 7px;
+}
+
+.list ul li:nth-child(3) {
+  font-size: 8px;
+}
+
+.list ul li:nth-child(4) {
+  font-size: 9px;
+}
+
+.list ul li:nth-child(5) {
+  font-size: 10px;
+}
+
+.list ul li:nth-child(6) {
+  font-size: 11px;
+}
+
+.list ul li:nth-child(7) {
+  font-size: 12px;
+}
+
+.list ul li:nth-child(8) {
+  font-size: 13px;
+}
+
+.list ul li:nth-child(9) {
+  font-size: 14px;
+}
+
+.list ul li:nth-child(10) {
+  font-size: 15px;
 }
 
 /*# sourceMappingURL=styles.css.map */
