--- a/bootstrap/styles.css
+++ b/bootstrap/styles.css
@@ -1,9 +1,25 @@
 #menu{
-    height: 100px;
+    height: 50px;
 }
 
 #menu ul{
     text-decoration: none;
     list-style: none;
-    line-height: 100px;
+    line-height: 50px;
+}
+
+.item{
+    height: 150px;
+}
+footer{
+    height: 50px;
+    line-height: 50px;
+}
+
+.aside{
+    height: 250px;
+}
+
+.aside > div{
+    height: calc(250px / 3);
 }
